# c2ffi

./: .gitignore  LICENSE  README.md
.github/scripts/: install-clang-x64-windows.sh
.github/workflows/: main.yml  release.yml  test.yml
src/c/tests/function_int/: CMakeLists.txt  config.json
src/c/tests/functions/function_int/: CMakeLists.txt
src/cs/: .globalconfig  Analyzers.globalconfig  Directory.Build.props  Directory.Build.targets  c2ffi.sln  c2json.sln
src/cs/production/c2ffi.Data/: CFfiCrossPlatform.cs  CFfiTargetPlatform.cs  CFunctionCallingConvention.cs  CLocation.cs  CNodeKind.cs  CRecordKind.cs  CType.cs  CTypeInfo.cs  Native.cs  NativeArchitecture.cs  NativeOperatingSystem.cs  TargetPlatform.cs  c2ffi.Data.csproj
src/cs/production/c2ffi.Tool/: ArrayDeque.cs  CommandLineInterfaceCommand.cs  CommandLineInterfaceHost.cs  IDependencyInjectionStartup.cs  InputSanitizationException.cs  InputSanitizer.cs  Program.cs  ProjectInfoAttribute.cs  Startup.cs  c2ffi.Tool.csproj  c2ffi.Tool.csproj.DotSettings
src/cs/production/c2json.Data/: CAbstractSyntaxTreeCrossPlatform.cs  CAbstractSyntaxTreeTargetPlatform.cs  CFfiCrossPlatform.cs  CFfiTargetPlatform.cs  CFunctionCallingConvention.cs  CLocation.cs  CNodeKind.cs  CRecordKind.cs  CTypeInfo.cs  Native.cs  NativeArchitecture.cs  NativeOperatingSystem.cs  TargetPlatform.cs  c2json.Data.csproj
src/cs/production/c2json.Tool/: CommandLineInterfaceCommand.cs  CommandLineInterfaceHost.cs  IDependencyInjectionStartup.cs  Program.cs  ProjectInfoAttribute.cs  Startup.cs  (+1 more)
src/cs/tests/: Directory.Build.props
(+412 files in other folders)
